k8s/ngrok/ngrok-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngrok-ingress-controller-kubernetes-ingress-controller
  namespace: ngrok-ingress-controller
  labels:
    app: ngrok-ingress-controller-kubernetes-ingress-controller
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: kubernetes-ingress-controller
