k8s/ngrok/ngrok-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-review-apps-ingress
spec:
  ingressClassName: ngrok
  rules:
  - host: consul-review-apps.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000
      - path: /api
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3000
